[package]
name = "honeypot"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.61.1"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO"
]